force-app/main/default/objects/Case_Comment_Relation__c/Case_Comment_Relation__c.object-meta.xml
<CustomObject>
    <description>This contains the details of rally discussion details with respective to sf details. Prior Name: Case Comment Relation</description>
    <label>Rally Comments</label>
    <nameField>
        <displayFormat>CCR-{00000}</displayFormat>
        <label>Case Comment Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rally Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>