force-app/main/default/objects/Case_Comment_Relation__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>This contains the case id of sf</description>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Comment_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>