force-app/main/default/objects/Case_Comment_Relation__c/fields/Defect_Id__c.field-meta.xml
<CustomField>
    <fullName>Defect_Id__c</fullName>
    <description>This contains the defect id value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Defect Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>