force-app/main/default/objects/Case_Comment_Relation__c/fields/Rally_discussion_Id__c.field-meta.xml
<CustomField>
    <fullName>Rally_discussion_Id__c</fullName>
    <description>This contains the discussion id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rally discussion Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>