force-app/main/default/objects/Case_Comment_Relation__c/fields/Sf_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Sf_Comment_Id__c</fullName>
    <description>This contains the comment id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sf Comment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>