force-app/main/default/objects/Case_Comment_Relation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This contains the status of comment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>