force-app/main/default/objects/Case_Comment_Relation__c/fields/To_be_Send__c.field-meta.xml
<CustomField>
    <fullName>To_be_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the checked when check box is checked</description>
    <label>To be Send</label>
    <type>Checkbox</type>
</CustomField>